corrected overflow on landing to allow for mobile refresh, added a line of random text.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 body{
     width: 100vw;
     height: 100vh;
-    overflow:hidden;
 }
 a{
     color: black;
@@ -35,6 +34,7 @@ p{
 .container{
     display:inline-block;
     margin-right: 5vw;
+    overflow: hidden
 }
 .random-text{
     font-family: "helvetica-light";
@@ -171,11 +171,12 @@ p{
 @media screen and (min-width: 600px){
     .random-text{font-size:22pt}
     .btn{font-size: 22pt}
-    .title{height: 70vh}
+    .title{height: 75vh}
 }
 @media screen and (min-width: 1000px){
     .random-text{font-size:12pt}
     .btn{font-size: 12pt}
     .story{font-size: 12pt}
     .big-text{font-size: 100pt}
+    .title{height: 75vh}
 }
